--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,7 @@ name: Core
 version: 0.0.1
 author: ItsMas_
 main: valour.network.core.Core
+
+commands:
+  consoleupdaterank:
+    usage: /<command> <UUID> <rank>
